// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  data-stylename="header"
>
  <Avatar
    avatarUrl="foo.png"
    data-stylename="avatar"
    url="/m/123"
  />
  <div
    data-stylename="headerText"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
    >
      <Link
        data-stylename="userName"
        replace={false}
        to="/m/123"
      >
        JJ
      </Link>
    </Highlight>
    <div>
      <span
        data-stylename="timestamp"
      />
    </div>
  </div>
  <div
    data-stylename="upperRight"
  />
</div>
`;

exports[`matches snapshot 2`] = `
<div
  data-stylename="header"
>
  <Avatar
    avatarUrl="foo.png"
    data-stylename="avatar"
    url="/m/123"
  />
  <div
    data-stylename="headerText"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
    >
      <Link
        data-stylename="userName"
        replace={false}
        to="/m/123"
      >
        JJ
      </Link>
    </Highlight>
    <div>
      <span
        data-stylename="timestamp"
      >
        <span
          data-stylename="spacer"
        >
          •
        </span>
      </span>
      <Link
        data-stylename="context"
        replace={false}
        to="/c/fooc"
      >
        FooC
      </Link>
    </div>
  </div>
  <div
    data-stylename="upperRight"
  >
    <PostLabel
      data-stylename="label"
      type="request"
    />
  </div>
</div>
`;

exports[`matches snapshot 3`] = `
<div
  data-stylename="header"
>
  <Avatar
    avatarUrl="foo.png"
    data-stylename="avatar"
    url="/m/123"
  />
  <div
    data-stylename="headerText"
  >
    <Highlight
      component="span"
      highlightClassName="highlight"
    >
      <Link
        data-stylename="userName"
        replace={false}
        to="/m/123"
      >
        JJ
      </Link>
    </Highlight>
    <div>
      <span
        data-stylename="timestamp"
      >
        <span
          data-stylename="spacer"
        >
          •
        </span>
      </span>
      <Link
        data-stylename="context"
        replace={false}
        to="/c/fooc"
      >
        FooC
      </Link>
    </div>
  </div>
  <div
    data-stylename="upperRight"
  >
    <PostLabel
      data-stylename="label"
      type="request"
    />
    <Dropdown
      items={
        Array [
          Object {
            "icon": "Edit",
            "label": "Edit",
            "onClick": [Function],
          },
          Object {
            "icon": "Trash",
            "label": "Delete",
            "onClick": [Function],
          },
        ]
      }
      toggleChildren={
        <Icon
          name="More"
        />
      }
    />
  </div>
</div>
`;
